# Kestrel

./: .gitignore  LICENSE  README.md  design.md  progress.md
.github/workflows/: ci.yaml
docker/: Dockerfile  compose.yaml  entrypoint.sh
docs/: architecture.md  benchmarks.md  edge_benchmarks.md  health_benchmarks.md  index.html  replay.js  sample_report.md  style.css
scripts/: eval_health_model.py  eval_model.py  export_depth_model.py  fly_square.sh  quantize_models.py  record_replay.py  record_telemetry.py  run_sitl.sh  score_mission.py  test_mcp.py  train_health_model.py
src/kestrel/: package.xml  setup.cfg  setup.py
src/kestrel/config/: kestrel_params.yaml
src/kestrel/config/sites/: pylon.yaml  turbine.yaml
src/kestrel/kestrel/: __init__.py  defect_detector.py  depth_navigator.py  flight_commander.py  health_monitor.py  inspection_planner.py  mcp_server.py  mission_director.py  obstacle_monitor.py  report_writer.py  safety_guard.py  telemetry_monitor.py
src/kestrel/launch/: mission.launch.py  sim.launch.py  sitl.launch.py
src/kestrel/models/defect_marker/: generate_markers.py  model.config  model.sdf
src/kestrel/models/defect_marker_turbine/: model.config  model.sdf
src/kestrel/models/kestrel_iris/: model.config  model.sdf
src/kestrel/test/: test_inspection_planner.py  test_smoke_sitl.py
src/kestrel/worlds/: pylon_world.sdf  turbine_world.sdf
src/kestrel_msgs/: CMakeLists.txt  package.xml
src/kestrel_msgs/msg/: DefectEvent.msg  HealthAlert.msg  NavigationAdvisory.msg  ObstacleHazard.msg
src/kestrel_msgs/srv/: GotoLocal.srv
(+10 files in other folders)
