<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kestrel</name>
  <version>0.1.0</version>
  <description>Autonomous inspection drone nodes</description>
  <maintainer email="andrewjnieves1@gmail.com">Andrew Nieves</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>kestrel_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
